# camel_sociey

./: .gitignore  README.md  pyproject.toml
src/camel_society/: camelai.py
